# mikroseclist

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  compose-crowdsec.yaml  compose-dev.yaml  compose.yaml  docker-compose-crowdsec.yaml  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
crowdsec/: crowdsec-blocklist-mirror.yaml
crowdsec_blocklist/: compose.yaml
microseclist/: main.py  mikrotik_client.py  settings.py
mikroseclist/: __main__.py  main.py  mikrotik_client.py  settings.py
