[tool.poetry]
name = "mikroseclist"
version = "0.1.0"
description = ""
authors = ["Artur Akmalov <artur@akmalov.com>"]
readme = "README.md"
packages = [{include = "mikroseclist"}]

[tool.poetry.dependencies]
python = "^3.11"
routeros-api = "^0.17.0"
requests = "^2.31.0"
pydantic-settings = "^2.2.1"
schedule = "^1.2.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
