[tool.poetry]
name = "mikroseclist"
version = "2.0.0"
description = ""
authors = ["Artur Akmalov <artur@akmalov.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
routeros-api = "^0.18.1"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"
schedule = "^1.2.2"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
